--- a/ejemplo.html
+++ b/ejemplo.html
@@ -2,32 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="stilos.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>gradiente</title>
   </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-        </ul>
-      </nav>
-    </header>
-    <section class="main">
-      <article>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla
-        architecto neque, officia ipsa aliquid asperiores voluptatibus soluta
-        temporibus non unde consequuntur, aperiam nemo reiciendis minus!
-        Numquam, voluptatum fuga! Quisquam, dolorem.
-      </article>
-    </section>
-    <footer>
-      <p>legal</p>
-      <p>redes sociales</p>
-    </footer>
+  <body class="body">
+    <main class="main">
+      <section class="section">
+        <button class="button">sub gratis</button>
+        <button class="buttongradient">→ ♫prime♪ ←</button>
+      </section>
+    </main>
   </body>
 </html>
